init list modules

--- a/src/GlobalStyles.css
+++ b/src/GlobalStyles.css
@@ -34,3 +34,17 @@ body{
     border: 0 !important;
     opacity: 1 !important;
 }
+
+.nav-tabs .nav-link {
+    border: none;
+    color: #2F2E41;
+    font-weight: 500;
+    padding-left: .2em;
+    padding-right: .2em;
+    margin-right: .6em;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #2f2e41;
+    background-color: #fff;
+    border-bottom: 3px solid #d16fff;
+}
