--- a/src/GlobalStyles.css
+++ b/src/GlobalStyles.css
@@ -44,7 +44,7 @@ body{
     margin-right: .6em;
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    color: #2f2e41;
+    color: #d16fff;
     background-color: #fff;
     border-bottom: 3px solid #d16fff;
 }
