--- a/src/GlobalStyles.css
+++ b/src/GlobalStyles.css
@@ -1,5 +1,6 @@
 body{
     -webkit-font-smoothing: antialiased;
+    font-family: sans-serif;
 }
 
 .carousel-control-next, .carousel-control-prev {
