--- a/src/GlobalStyles.css
+++ b/src/GlobalStyles.css
@@ -49,6 +49,13 @@ body{
     background-color: #fff;
     border-bottom: 3px solid #d16fff;
 }
+.container-spinner{
+    width: 100%;
+    height: 100px;
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+}
 @keyframes spinner {
     0% {
       transform: rotate(0deg);
